--- a/Topic 01 - Basic Python/Basic Python 3 - Control Structures.ipynb
+++ b/Topic 01 - Basic Python/Basic Python 3 - Control Structures.ipynb
@@ -139,6 +139,31 @@
    ]
   },
   {
+   "source": [
+    "### Short-hand if statement"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruit = 'Apple'\n",
+    "\n",
+    "#Long \n",
+    "if fruit == 'Apple':\n",
+    "    print('Yes')\n",
+    "else:\n",
+    "    print('No')\n",
+    "\n",
+    "#Short\n",
+    "print('Yes' if fruit == 'Apple' else 'No')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -279,6 +304,24 @@
   },
   {
    "source": [
+    "### Print two digits number"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1,21):\n",
+    "    twoDigitsNumber = '0' + str(i) if i < 10 else str(i)\n",
+    "    print(twoDigitsNumber)"
+   ]
+  },
+  {
+   "source": [
     "## List Comprehension"
    ],
    "cell_type": "markdown",
@@ -286,17 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numList1 = []\n",
     "for i in range(20):\n",
@@ -306,17 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numList2 = [i for i in range(20)]\n",
     "print(numList2)"
@@ -324,17 +351,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numList3 = [i for i in range(20) if i%2==0 ]\n",
     "print(numList3)"
@@ -342,17 +361,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numList4 = ['Even' if i%2==0 else 'Odd' for i in range(20) ]\n",
     "print(numList4)"
