--- a/Topic 01 - Basic Python/Basic Python 1 - Number and String.ipynb
+++ b/Topic 01 - Basic Python/Basic Python 1 - Number and String.ipynb
@@ -533,11 +533,13 @@
    },
    "outputs": [],
    "source": [
-    "print(name)\n",
+    "name = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
     "print(name[0])\n",
     "print(name[1])\n",
     "print(name[2])\n",
-    "print(name[3])"
+    "print(name[3])\n",
+    "print(name[-1])\n",
+    "print(name[-2])"
    ]
   },
   {
@@ -553,12 +555,12 @@
    },
    "outputs": [],
    "source": [
-    "mystr = ' Welcome to Botnoi class room'\n",
-    "print(mystr[0:5]) # เลือกตั้งแต่ตัวที่ 0 ถึงตัวที่ 4\n",
-    "print(mystr[1:8]) # เลือกตั้งแต่ตัวที่ 1 ถึงตัวที่ 7\n",
-    "print(mystr[-4:]) # เลือกตั้งแต่ตัวที่ 4 นับจากสุดท้าย ไปจนจบ\n",
-    "print(mystr[-6:-1]) # เลือกตั้งแต่ตัวที่ 6 นับจากสุดท้าย ถึงตัวที่ 2 นับจากสุดท้าย\n",
-    "print(mystr[:5])  # เลือกตั้งแต่ตัวแรก ถึงตัวที่ 4"
+    "mystr = '123456789'\n",
+    "print(mystr[0:5]) # เลือกตั้งแต่ตัวที่ 1 ถึงตัวที่ 6 (ตัดตัวสุดท้าย)\n",
+    "print(mystr[:5])  # เลือกตั้งแต่ตัวแรก ถึงตัวที่ 6 (ตัดตัวสุดท้าย)\n",
+    "print(mystr[1:8]) # เลือกตั้งแต่ตัวที่ 2 ถึงตัวที่ 9 (ตัดตัวสุดท้าย)\n",
+    "print(mystr[-6:-1]) # เลือกตั้งแต่ตัวที่ 6 นับจากสุดท้าย ถึงตัวสุดท้าย (ตัดตัวสุดท้าย)\n",
+    "print(mystr[-4:]) # เลือกตั้งแต่ตัวที่ 4 นับจากสุดท้าย (ไม่ตัดตัวสุดท้าย)"
    ]
   },
   {
@@ -567,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mystr"
+    "mystr = 'Welcome to my class'"
    ]
   },
   {
@@ -696,9 +698,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -710,7 +711,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
   }
  },
  "nbformat": 4,
