--- a/Topic 01 - Basic Python/Basic Python 2 - Collections.ipynb
+++ b/Topic 01 - Basic Python/Basic Python 2 - Collections.ipynb
@@ -24,9 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['trek', 'cannondale', 'redline', 'specialized']\ntrek\nTrek\n"
+     ]
+    }
+   ],
    "source": [
     "bicycles = ['trek', 'cannondale', 'redline', 'specialized']\n",
     "print(bicycles)\n",
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -52,7 +60,18 @@
     "id": "Oc3x-E4hrlQO",
     "outputId": "d6d7cb63-be9a-4755-cdfc-6c6d59a2fd85"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 'hi', 1, 3, [1, 2, 3, 4, 5]]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "x = [1,2,3,4,5]\n",
     "y = ['hi',1,3,x]\n",
@@ -71,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -80,7 +99,15 @@
     "id": "4j2NFF3XtHlq",
     "outputId": "91544162-481a-4139-d683-2dac03ca3ab6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "trek\ncannondale\nspecialized\nredline\n['trek', 'cannondale']\n"
+     ]
+    }
+   ],
    "source": [
     "bicycles = ['trek', 'cannondale', 'redline', 'specialized']\n",
     "print(bicycles[0])\n",
@@ -106,9 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['honda', 'yamaha', 'suzuki']\n['ducati', 'yamaha', 'suzuki']\n"
+     ]
+    }
+   ],
    "source": [
     "motorcycles = ['honda', 'yamaha', 'suzuki']\n",
     "print(motorcycles)\n",
@@ -125,9 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['honda', 'yamaha', 'suzuki']\n"
+     ]
+    }
+   ],
    "source": [
     "motorcycles = []\n",
     "motorcycles.append('honda')\n",
@@ -145,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['honda', 'yamaha', 'suzuki', 'BMW']\n['honda', 'suzuki', 'BMW']\n"
+     ]
+    }
+   ],
    "source": [
     "motorcycles = ['honda', 'yamaha', 'suzuki', 'BMW']\n",
     "print(motorcycles)\n",
@@ -157,9 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['suzuki', 'BMW']\n"
+     ]
+    }
+   ],
    "source": [
     "motorcycles.pop(0)\n",
     "print(motorcycles)"
@@ -167,9 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['suzuki']\n"
+     ]
+    }
+   ],
    "source": [
     "del motorcycles[1]\n",
     "print(motorcycles)"
@@ -196,9 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'winn': '0618201998', 'ricky': '0812312341'}\n"
+     ]
+    }
+   ],
    "source": [
     "mydic = {} \n",
     "mydic['winn'] = '0618201998'\n",
@@ -208,9 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{1: 'one', 2: 'two', 3: 'three'}\n"
+     ]
+    }
+   ],
    "source": [
     "number_dict = {1:\"one\",2:\"two\",3:\"three\"}\n",
     "print(number_dict)"
@@ -227,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "5sJ-05a8-vWg"
    },
@@ -238,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -247,7 +330,18 @@
     "id": "dGuI9oc3-zQH",
     "outputId": "0c4e55fb-e51f-42bd-9dd5-c0d393b9582e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'winn': '0618201998', 'ricky': '0812312341', 'arm': '4548885656'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
    "source": [
     "mydic"
    ]
@@ -263,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -272,7 +366,15 @@
     "id": "anTmi3WPuJp3",
     "outputId": "755b6eda-f0fc-4762-a040-46f408b8ce0b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[['winn', '0618201998'], ['ricky', '0812312341']]\n{'winn': '0618201998', 'ricky': '0812312341'}\n"
+     ]
+    }
+   ],
    "source": [
     "a = [[\"winn\",'0618201998'],[\"ricky\",'0812312341']]\n",
     "print(a)\n",
@@ -282,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -291,7 +393,15 @@
     "id": "__iN39PA_SzM",
     "outputId": "f9c2eaed-f1d1-4123-e0ae-a96e36a896a5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'winn': '0618201998', 'ricky': '0812312341'}\n"
+     ]
+    }
+   ],
    "source": [
     "name = [\"winn\",\"ricky\"]\n",
     "tel = ['0618201998','0812312341']\n",
@@ -308,9 +418,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'winn': '0618201998', 'ricky': '0812312341', 'arm': '4548885656'}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'0618201998'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
    "source": [
     "print(mydic)\n",
     "mydic['winn']"
@@ -327,11 +455,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "QHmMo8Tt_j10"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'arm': '000000000', 'ricky': '0812312341', 'winn': '0618201998', 'tao': '0811111111'}\n{'arm': '000000000', 'ricky': '0812312341', 'winn': '0618201998'}\n"
+     ]
+    }
+   ],
    "source": [
     "mydic = {'arm': '000000000',\n",
     "         'ricky': '0812312341',\n",
@@ -344,9 +480,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'arm': '000000000', 'winn': '0618201998'}\n"
+     ]
+    }
+   ],
    "source": [
     "mydic.pop('ricky')\n",
     "print(mydic)"
@@ -361,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -370,7 +514,15 @@
     "id": "KCjRZBUouNpn",
     "outputId": "006455f5-6819-49ff-f7c1-333b9f14842b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['arm', 'winn']\n['000000000', '0618201998']\n"
+     ]
+    }
+   ],
    "source": [
     "print(list(mydic.keys()))\n",
     "print(list(mydic.values()))"
@@ -385,11 +537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "FkHJLl4TucPd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'winn': {'telephone': '0618201998', 'email': 'vwinnv@gmail.com'}, 'kitima': {'telephone': '0812314123', 'email': 'kitima@gmail.com'}, 'nong': {'telephone': '092123123123', 'email': 'nong@gmail.com'}}\n"
+     ]
+    }
+   ],
    "source": [
     "winninfo = {'telephone':'0618201998','email':'vwinnv@gmail.com'}\n",
     "kitimainfo = {'telephone':'0812314123','email':'kitima@gmail.com'}\n",
@@ -400,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -409,7 +569,15 @@
     "id": "Umnf5dWvAsca",
     "outputId": "1a5e02af-6871-4da4-cb45-29c8c37e3475"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "vwinnv@gmail.com\n092123123123\n"
+     ]
+    }
+   ],
    "source": [
     "print(mydic[\"winn\"][\"email\"])\n",
     "print(mydic['nong']['telephone'])"
@@ -424,27 +592,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['winn', 'kitima', 'nong']\n[['0618201998', 'vwinnv@gmail.com'], ['0812314123', 'kitima@gmail.com'], ['092123123123', 'nong@gmail.com']]\n"
+     ]
+    }
+   ],
    "source": [
     "mylistName = list(mydic.keys())\n",
-    "mylist =  [  list(winninfo.values()), list(kitimainfo.values()), list(nonginfo.values())]\n",
+    "mylist =  [list(winninfo.values()), list(kitimainfo.values()), list(nonginfo.values())]\n",
     "print(mylistName)\n",
     "print(mylist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "vwinnv@gmail.com\n092123123123\n"
+     ]
+    }
+   ],
    "source": [
-    "idx = mylistName.index('winn')\n",
-    "print(mylist[idx][0])\n",
+    "#print(mydic[\"winn\"][\"email\"])\n",
+    "print(mylist[0][1])\n",
     "\n",
-    "idx = mylistName.index('nong')\n",
-    "print(mylist[idx][1])"
+    "#print(mydic['nong']['telephone'])\n",
+    "print(mylist[2][0])"
    ]
   },
   {
@@ -458,9 +642,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('apple', 'banana', 'cherry')\n"
+     ]
+    }
+   ],
    "source": [
     "a = (\"apple\", \"banana\", \"cherry\")\n",
     "print(a)"
@@ -468,16 +660,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "apple\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,9 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'banana', 'cherry', 'apple'}\n"
+     ]
+    }
+   ],
    "source": [
     "#Set does not contain duplicated value\n",
     "a = {\"apple\", \"banana\", \"cherry\", \"apple\"}\n",
@@ -516,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,9 +734,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "banana\n"
+     ]
+    }
+   ],
    "source": [
     "#Convert set into list\n",
     "b = list(a)\n",
@@ -544,7 +760,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('admin': virtualenv)"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -559,7 +775,7 @@
    "version": "3.8.8"
   },
   "interpreter": {
-   "hash": "ef7f9a8012d9131766e31894c279374cc63c73121ed4db3b9e67a294a4bf0e74"
+   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
   }
  },
  "nbformat": 4,
