--- a/Topic 02 - Classification/T13_Perceptron_Iris_Full.ipynb
+++ b/Topic 02 - Classification/T13_Perceptron_Iris_Full.ipynb
@@ -15,10 +15,10 @@
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('admin': virtualenv)"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "ef7f9a8012d9131766e31894c279374cc63c73121ed4db3b9e67a294a4bf0e74"
+   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
   }
  },
  "nbformat": 4,
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,26 +37,26 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import Perceptron\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from PlotFunction import plot_decision_surface"
+    "from sklearn.metrics import accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = \"best\"\n",
+    "param = \"2\"\n",
     "paramSet = {\n",
     "    \"firstTry\": {\"eta0\": 0.01, \"n_iter_no_change\": 3, \"random_state\": 5},\n",
     "    \"best\": {\"eta0\": 0.1, \"n_iter_no_change\": 10, \"random_state\": 1},\n",
+    "    \"2\": {\"eta0\": 1, \"n_iter_no_change\": 10, \"random_state\": 1},\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sepal length (cm)</th>\n      <th>sepal width (cm)</th>\n      <th>petal length (cm)</th>\n      <th>petal width (cm)</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.1</td>\n      <td>3.5</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4.9</td>\n      <td>3.0</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.7</td>\n      <td>3.2</td>\n      <td>1.3</td>\n      <td>0.2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.6</td>\n      <td>3.1</td>\n      <td>1.5</td>\n      <td>0.2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.0</td>\n      <td>3.6</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 25
     }
    ],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 26
     }
    ],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -222,140 +222,167 @@
      "name": "stdout",
      "text": [
       "-- Epoch 1\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 105, Avg. loss: 0.001606\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 105, Avg. loss: 0.016057\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 2\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 210, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 210, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 3\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 315, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 315, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 4\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 420, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 420, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 5\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 525, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 525, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 6\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 630, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 630, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 7\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 735, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 735, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 8\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 840, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 840, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 9\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 945, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 945, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 10\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 1050, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 1050, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 11\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 1155, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 1155, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 12\n",
-      "Norm: 0.34, NNZs: 4, Bias: -0.100000, T: 1260, Avg. loss: 0.000000\n",
+      "Norm: 3.42, NNZs: 4, Bias: -1.000000, T: 1260, Avg. loss: 0.000000\n",
       "Total training time: 0.00 seconds.\n",
       "Convergence after 12 epochs took 0.00 seconds\n",
       "-- Epoch 1\n",
-      "Norm: 0.28, NNZs: 4, Bias: -0.100000, T: 105, Avg. loss: 0.068625\n",
+      "Norm: 2.84, NNZs: 4, Bias: -1.000000, T: 105, Avg. loss: 0.686254\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 2\n",
-      "Norm: 0.44, NNZs: 4, Bias: -0.200000, T: 210, Avg. loss: 0.064369\n",
+      "Norm: 4.38, NNZs: 4, Bias: -2.000000, T: 210, Avg. loss: 0.643693\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 3\n",
-      "Norm: 0.47, NNZs: 4, Bias: -0.100000, T: 315, Avg. loss: 0.068704\n",
+      "Norm: 4.73, NNZs: 4, Bias: -1.000000, T: 315, Avg. loss: 0.687040\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 4\n",
-      "Norm: 0.38, NNZs: 4, Bias: -0.400000, T: 420, Avg. loss: 0.066054\n",
+      "Norm: 3.81, NNZs: 4, Bias: -4.000000, T: 420, Avg. loss: 0.660540\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 5\n",
-      "Norm: 0.51, NNZs: 4, Bias: -0.000000, T: 525, Avg. loss: 0.071731\n",
+      "Norm: 5.10, NNZs: 4, Bias: 0.000000, T: 525, Avg. loss: 0.717311\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 6\n",
-      "Norm: 0.45, NNZs: 4, Bias: -0.200000, T: 630, Avg. loss: 0.071864\n",
+      "Norm: 4.49, NNZs: 4, Bias: -2.000000, T: 630, Avg. loss: 0.718645\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 7\n",
-      "Norm: 0.49, NNZs: 4, Bias: -0.100000, T: 735, Avg. loss: 0.060964\n",
+      "Norm: 4.87, NNZs: 4, Bias: -1.000000, T: 735, Avg. loss: 0.609635\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 8\n",
-      "Norm: 0.45, NNZs: 4, Bias: -0.200000, T: 840, Avg. loss: 0.050370\n",
+      "Norm: 4.48, NNZs: 4, Bias: -2.000000, T: 840, Avg. loss: 0.503700\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 9\n",
-      "Norm: 0.48, NNZs: 4, Bias: -0.100000, T: 945, Avg. loss: 0.058823\n",
+      "Norm: 4.79, NNZs: 4, Bias: -1.000000, T: 945, Avg. loss: 0.588225\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 10\n",
-      "Norm: 0.49, NNZs: 4, Bias: -0.100000, T: 1050, Avg. loss: 0.056780\n",
+      "Norm: 4.90, NNZs: 4, Bias: -1.000000, T: 1050, Avg. loss: 0.567799\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 11\n",
-      "Norm: 0.57, NNZs: 4, Bias: -0.100000, T: 1155, Avg. loss: 0.073469\n",
+      "Norm: 5.69, NNZs: 4, Bias: -1.000000, T: 1155, Avg. loss: 0.734691\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 12\n",
-      "Norm: 0.55, NNZs: 4, Bias: -0.100000, T: 1260, Avg. loss: 0.062943\n",
+      "Norm: 5.48, NNZs: 4, Bias: -1.000000, T: 1260, Avg. loss: 0.629431\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 13\n",
-      "Norm: 0.54, NNZs: 4, Bias: -0.100000, T: 1365, Avg. loss: 0.065729\n",
+      "Norm: 5.42, NNZs: 4, Bias: -1.000000, T: 1365, Avg. loss: 0.657287\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 14\n",
-      "Norm: 0.59, NNZs: 4, Bias: -0.200000, T: 1470, Avg. loss: 0.057977\n",
+      "Norm: 5.86, NNZs: 4, Bias: -2.000000, T: 1470, Avg. loss: 0.579769\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 15\n",
-      "Norm: 0.50, NNZs: 4, Bias: -0.300000, T: 1575, Avg. loss: 0.072278\n",
+      "Norm: 5.03, NNZs: 4, Bias: -3.000000, T: 1575, Avg. loss: 0.722784\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 16\n",
-      "Norm: 0.50, NNZs: 4, Bias: -0.100000, T: 1680, Avg. loss: 0.076208\n",
+      "Norm: 5.04, NNZs: 4, Bias: -1.000000, T: 1680, Avg. loss: 0.762076\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 17\n",
-      "Norm: 0.53, NNZs: 4, Bias: -0.200000, T: 1785, Avg. loss: 0.056882\n",
+      "Norm: 5.28, NNZs: 4, Bias: -2.000000, T: 1785, Avg. loss: 0.568817\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 18\n",
-      "Norm: 0.45, NNZs: 4, Bias: -0.000000, T: 1890, Avg. loss: 0.061637\n",
+      "Norm: 4.48, NNZs: 4, Bias: 0.000000, T: 1890, Avg. loss: 0.616373\n",
       "Total training time: 0.00 seconds.\n",
       "Convergence after 18 epochs took 0.00 seconds\n",
       "-- Epoch 1\n",
-      "Norm: 0.46, NNZs: 4, Bias: -0.400000, T: 105, Avg. loss: 0.011711\n",
+      "Norm: 4.63, NNZs: 4, Bias: -4.000000, T: 105, Avg. loss: 0.117110\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 2\n",
-      "Norm: 0.61, NNZs: 4, Bias: -0.400000, T: 210, Avg. loss: 0.008261\n",
+      "Norm: 6.05, NNZs: 4, Bias: -4.000000, T: 210, Avg. loss: 0.082610\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 3\n",
-      "Norm: 0.66, NNZs: 4, Bias: -0.400000, T: 315, Avg. loss: 0.008340\n",
+      "Norm: 6.65, NNZs: 4, Bias: -4.000000, T: 315, Avg. loss: 0.083400\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 4\n",
-      "Norm: 0.65, NNZs: 4, Bias: -0.500000, T: 420, Avg. loss: 0.003669\n",
+      "Norm: 6.52, NNZs: 4, Bias: -5.000000, T: 420, Avg. loss: 0.036689\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 5\n",
-      "Norm: 0.57, NNZs: 4, Bias: -0.600000, T: 525, Avg. loss: 0.002994\n",
+      "Norm: 5.68, NNZs: 4, Bias: -6.000000, T: 525, Avg. loss: 0.029938\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 6\n",
-      "Norm: 0.73, NNZs: 4, Bias: -0.500000, T: 630, Avg. loss: 0.006549\n",
+      "Norm: 7.28, NNZs: 4, Bias: -5.000000, T: 630, Avg. loss: 0.065487\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 7\n",
-      "Norm: 0.76, NNZs: 4, Bias: -0.600000, T: 735, Avg. loss: 0.004505\n",
+      "Norm: 7.57, NNZs: 4, Bias: -6.000000, T: 735, Avg. loss: 0.045049\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 8\n",
-      "Norm: 0.81, NNZs: 4, Bias: -0.600000, T: 840, Avg. loss: 0.004995\n",
+      "Norm: 8.15, NNZs: 4, Bias: -6.000000, T: 840, Avg. loss: 0.049946\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 9\n",
-      "Norm: 0.71, NNZs: 4, Bias: -0.700000, T: 945, Avg. loss: 0.004717\n",
+      "Norm: 7.11, NNZs: 4, Bias: -7.000000, T: 945, Avg. loss: 0.047173\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 10\n",
-      "Norm: 0.73, NNZs: 4, Bias: -0.700000, T: 1050, Avg. loss: 0.003696\n",
+      "Norm: 7.33, NNZs: 4, Bias: -7.000000, T: 1050, Avg. loss: 0.036959\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 11\n",
-      "Norm: 0.76, NNZs: 4, Bias: -0.700000, T: 1155, Avg. loss: 0.003662\n",
+      "Norm: 7.58, NNZs: 4, Bias: -7.000000, T: 1155, Avg. loss: 0.036616\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 12\n",
-      "Norm: 0.76, NNZs: 4, Bias: -0.700000, T: 1260, Avg. loss: 0.005392\n",
+      "Norm: 7.56, NNZs: 4, Bias: -7.000000, T: 1260, Avg. loss: 0.053918\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 13\n",
-      "Norm: 0.83, NNZs: 4, Bias: -0.700000, T: 1365, Avg. loss: 0.002760\n",
+      "Norm: 8.28, NNZs: 4, Bias: -7.000000, T: 1365, Avg. loss: 0.027599\n",
       "Total training time: 0.00 seconds.\n",
       "-- Epoch 14\n",
-      "Norm: 0.84, NNZs: 4, Bias: -0.700000, T: 1470, Avg. loss: 0.006752\n",
+      "Norm: 8.39, NNZs: 4, Bias: -7.000000, T: 1470, Avg. loss: 0.067520\n",
       "Total training time: 0.00 seconds.\n",
-      "Convergence after 14 epochs took 0.00 seconds\n",
+      "-- Epoch 15\n",
+      "Norm: 8.68, NNZs: 4, Bias: -7.000000, T: 1575, Avg. loss: 0.051739\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 16\n",
+      "Norm: 7.83, NNZs: 4, Bias: -9.000000, T: 1680, Avg. loss: 0.058306\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 17\n",
+      "Norm: 9.25, NNZs: 4, Bias: -8.000000, T: 1785, Avg. loss: 0.085985\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 18\n",
+      "Norm: 9.44, NNZs: 4, Bias: -8.000000, T: 1890, Avg. loss: 0.070701\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 19\n",
+      "Norm: 9.99, NNZs: 4, Bias: -8.000000, T: 1995, Avg. loss: 0.062237\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 20\n",
+      "Norm: 10.00, NNZs: 4, Bias: -8.000000, T: 2100, Avg. loss: 0.052028\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 21\n",
+      "Norm: 10.21, NNZs: 4, Bias: -8.000000, T: 2205, Avg. loss: 0.060189\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 22\n",
+      "Norm: 10.41, NNZs: 4, Bias: -8.000000, T: 2310, Avg. loss: 0.035273\n",
+      "Total training time: 0.00 seconds.\n",
+      "-- Epoch 23\n",
+      "Norm: 10.81, NNZs: 4, Bias: -8.000000, T: 2415, Avg. loss: 0.051440\n",
+      "Total training time: 0.00 seconds.\n",
+      "Convergence after 23 epochs took 0.00 seconds\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
       "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:    0.0s finished\n"
      ]
@@ -364,11 +391,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Perceptron(eta0=0.1, n_iter_no_change=10, random_state=1, verbose=1)"
+       "Perceptron(eta0=1, n_iter_no_change=10, random_state=1, verbose=1)"
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 32
     }
    ],
    "source": [
@@ -378,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Misclassified examples: 3\nAccuracy score: 0.9333333333333333\n"
+      "Misclassified examples: 0\nAccuracy score: 1.0\n"
      ]
     }
    ],
