--- a/Topic 02 - Classification/T14_Perceptron_CNC.ipynb
+++ b/Topic 02 - Classification/T14_Perceptron_CNC.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('admin': virtualenv)"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "ef7f9a8012d9131766e31894c279374cc63c73121ed4db3b9e67a294a4bf0e74"
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "train.csv : (18, 7)\n"
+      "train_XX.csv : (18, 7)\n"
      ]
     },
     {
@@ -79,13 +79,107 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>No</th>\n      <th>material</th>\n      <th>feedrate</th>\n      <th>clamp_pressure</th>\n      <th>tool_condition</th>\n      <th>machining_finalized</th>\n      <th>passed_visual_inspection</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>wax</td>\n      <td>20</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>3.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "source": [
     "experiment_result = pd.read_csv(dataFolder + \"train.csv\")\n",
-    "print(f'train.csv : {experiment_result.shape}')\n",
+    "print(f'train_XX.csv : {experiment_result.shape}')\n",
     "experiment_result.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 18 entries, 0 to 17\nData columns (total 7 columns):\n #   Column                    Non-Null Count  Dtype  \n---  ------                    --------------  -----  \n 0   No                        18 non-null     int64  \n 1   material                  18 non-null     object \n 2   feedrate                  18 non-null     int64  \n 3   clamp_pressure            18 non-null     float64\n 4   tool_condition            18 non-null     object \n 5   machining_finalized       18 non-null     object \n 6   passed_visual_inspection  14 non-null     object \ndtypes: float64(1), int64(2), object(4)\nmemory usage: 1.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "experiment_result.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0     yes\n",
+       "1     yes\n",
+       "2     yes\n",
+       "3     NaN\n",
+       "4     NaN\n",
+       "5      no\n",
+       "6     NaN\n",
+       "7      no\n",
+       "8      no\n",
+       "9      no\n",
+       "10    yes\n",
+       "11    yes\n",
+       "12    yes\n",
+       "13    yes\n",
+       "14    yes\n",
+       "15    NaN\n",
+       "16    yes\n",
+       "17    yes\n",
+       "Name: passed_visual_inspection, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "experiment_result['passed_visual_inspection']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0     yes\n",
+       "1     yes\n",
+       "2     yes\n",
+       "3      no\n",
+       "4      no\n",
+       "5      no\n",
+       "6      no\n",
+       "7      no\n",
+       "8      no\n",
+       "9      no\n",
+       "10    yes\n",
+       "11    yes\n",
+       "12    yes\n",
+       "13    yes\n",
+       "14    yes\n",
+       "15     no\n",
+       "16    yes\n",
+       "17    yes\n",
+       "Name: passed_visual_inspection, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "experiment_result['passed_visual_inspection'] = experiment_result['passed_visual_inspection'].fillna('no')\n",
+    "experiment_result['passed_visual_inspection']"
    ]
   },
   {
@@ -173,7 +267,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['experiment_01.csv', 'experiment_02.csv', 'experiment_03.csv', 'experiment_04.csv', 'experiment_05.csv', 'experiment_06.csv', 'experiment_07.csv', 'experiment_08.csv', 'experiment_09.csv', 'experiment_10.csv', 'experiment_11.csv', 'experiment_12.csv', 'experiment_13.csv', 'experiment_14.csv', 'experiment_15.csv', 'experiment_16.csv', 'experiment_17.csv', 'experiment_18.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "filenames = [f'experiment_0{i}.csv' if i < 10 else f'experiment_{i}.csv' for i in range(1,19)]\n",
+    "print(filenames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -181,87 +300,52 @@
      "data": {
       "text/plain": [
        "   No material  feedrate  clamp_pressure tool_condition machining_finalized  \\\n",
-       "0   1      wax         6             4.0         unworn                 yes   \n",
        "1   2      wax        20             4.0         unworn                 yes   \n",
-       "2   3      wax         6             3.0         unworn                 yes   \n",
-       "3   4      wax         6             2.5         unworn                  no   \n",
-       "4   5      wax        20             3.0         unworn                  no   \n",
        "\n",
        "  passed_visual_inspection  \n",
-       "0                      yes  \n",
-       "1                      yes  \n",
-       "2                      yes  \n",
-       "3                       no  \n",
-       "4                       no  "
+       "1                      yes  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>No</th>\n      <th>material</th>\n      <th>feedrate</th>\n      <th>clamp_pressure</th>\n      <th>tool_condition</th>\n      <th>machining_finalized</th>\n      <th>passed_visual_inspection</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>wax</td>\n      <td>20</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>3.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>2.5</td>\n      <td>unworn</td>\n      <td>no</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>wax</td>\n      <td>20</td>\n      <td>3.0</td>\n      <td>unworn</td>\n      <td>no</td>\n      <td>no</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>No</th>\n      <th>material</th>\n      <th>feedrate</th>\n      <th>clamp_pressure</th>\n      <th>tool_condition</th>\n      <th>machining_finalized</th>\n      <th>passed_visual_inspection</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>wax</td>\n      <td>20</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 45
     }
    ],
    "source": [
-    "experiment_result['passed_visual_inspection'] = experiment_result['passed_visual_inspection'].fillna('no')\n",
-    "experiment_result.head()"
+    "exp_result_row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
+     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "   X1_ActualPosition  X1_ActualVelocity  X1_ActualAcceleration  \\\n",
-       "0              198.0                0.0                   0.00   \n",
-       "1              198.0              -10.8                -350.00   \n",
-       "2              196.0              -17.8                  -6.25   \n",
-       "\n",
-       "   X1_CommandPosition  X1_CommandVelocity  X1_CommandAcceleration  \\\n",
-       "0               198.0                 0.0                0.000000   \n",
-       "1               198.0               -13.6             -358.000000   \n",
-       "2               196.0               -17.9               -0.000095   \n",
-       "\n",
-       "   X1_CurrentFeedback  X1_DCBusVoltage  X1_OutputCurrent  X1_OutputVoltage  \\\n",
-       "0                0.18           0.0207             329.0              2.77   \n",
-       "1              -10.90           0.1860             328.0             23.30   \n",
-       "2               -8.59           0.1400             328.0             30.60   \n",
-       "\n",
-       "   ...  M1_sequence_number  M1_CURRENT_FEEDRATE  Machining_Process  exp_num  \\\n",
-       "0  ...                 0.0                 50.0           Starting        1   \n",
-       "1  ...                 4.0                 50.0               Prep        1   \n",
-       "2  ...                 7.0                 50.0               Prep        1   \n",
-       "\n",
-       "   material  feedrate  clamp_pressure  tool_condition  machining_finalized  \\\n",
-       "0       wax         6             4.0          unworn                  yes   \n",
-       "1       wax         6             4.0          unworn                  yes   \n",
-       "2       wax         6             4.0          unworn                  yes   \n",
-       "\n",
-       "   passed_visual_inspection  \n",
-       "0                       yes  \n",
-       "1                       yes  \n",
-       "2                       yes  \n",
-       "\n",
-       "[3 rows x 55 columns]"
-      ],
+      "text/plain": "   X1_ActualPosition  X1_ActualVelocity  X1_ActualAcceleration  \\\n0              198.0                0.0                   0.00   \n1              198.0              -10.8                -350.00   \n2              196.0              -17.8                  -6.25   \n\n   X1_CommandPosition  X1_CommandVelocity  X1_CommandAcceleration  \\\n0               198.0                 0.0                0.000000   \n1               198.0               -13.6             -358.000000   \n2               196.0               -17.9               -0.000095   \n\n   X1_CurrentFeedback  X1_DCBusVoltage  X1_OutputCurrent  X1_OutputVoltage  \\\n0                0.18           0.0207             329.0              2.77   \n1              -10.90           0.1860             328.0             23.30   \n2               -8.59           0.1400             328.0             30.60   \n\n   ...  M1_sequence_number  M1_CURRENT_FEEDRATE  Machining_Process  exp_num  \\\n0  ...                 0.0                 50.0           Starting        1   \n1  ...                 4.0                 50.0               Prep        1   \n2  ...                 7.0                 50.0               Prep        1   \n\n   material  feedrate  clamp_pressure  tool_condition  machining_finalized  \\\n0       wax         6             4.0          unworn                  yes   \n1       wax         6             4.0          unworn                  yes   \n2       wax         6             4.0          unworn                  yes   \n\n   passed_visual_inspection  \n0                       yes  \n1                       yes  \n2                       yes  \n\n[3 rows x 55 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>X1_ActualPosition</th>\n      <th>X1_ActualVelocity</th>\n      <th>X1_ActualAcceleration</th>\n      <th>X1_CommandPosition</th>\n      <th>X1_CommandVelocity</th>\n      <th>X1_CommandAcceleration</th>\n      <th>X1_CurrentFeedback</th>\n      <th>X1_DCBusVoltage</th>\n      <th>X1_OutputCurrent</th>\n      <th>X1_OutputVoltage</th>\n      <th>...</th>\n      <th>M1_sequence_number</th>\n      <th>M1_CURRENT_FEEDRATE</th>\n      <th>Machining_Process</th>\n      <th>exp_num</th>\n      <th>material</th>\n      <th>feedrate</th>\n      <th>clamp_pressure</th>\n      <th>tool_condition</th>\n      <th>machining_finalized</th>\n      <th>passed_visual_inspection</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>198.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>198.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.18</td>\n      <td>0.0207</td>\n      <td>329.0</td>\n      <td>2.77</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>50.0</td>\n      <td>Starting</td>\n      <td>1</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>198.0</td>\n      <td>-10.8</td>\n      <td>-350.00</td>\n      <td>198.0</td>\n      <td>-13.6</td>\n      <td>-358.000000</td>\n      <td>-10.90</td>\n      <td>0.1860</td>\n      <td>328.0</td>\n      <td>23.30</td>\n      <td>...</td>\n      <td>4.0</td>\n      <td>50.0</td>\n      <td>Prep</td>\n      <td>1</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>196.0</td>\n      <td>-17.8</td>\n      <td>-6.25</td>\n      <td>196.0</td>\n      <td>-17.9</td>\n      <td>-0.000095</td>\n      <td>-8.59</td>\n      <td>0.1400</td>\n      <td>328.0</td>\n      <td>30.60</td>\n      <td>...</td>\n      <td>7.0</td>\n      <td>50.0</td>\n      <td>Prep</td>\n      <td>1</td>\n      <td>wax</td>\n      <td>6</td>\n      <td>4.0</td>\n      <td>unworn</td>\n      <td>yes</td>\n      <td>yes</td>\n    </tr>\n  </tbody>\n</table>\n<p>3 rows × 55 columns</p>\n</div>"
      },
-     "metadata": {},
-     "execution_count": 7
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(25286, 55)\n"
+     ]
     }
    ],
    "source": [
     "frames = []\n",
-    "for i in range(1,19):\n",
+    "for (idx, filename) in zip(range(1,19), filenames):\n",
     "    #load files\n",
-    "    exp_num = '0' + str(i) if i < 10 else str(i)\n",
-    "    frame = pd.read_csv(dataFolder + f\"experiment_{exp_num}.csv\")\n",
+    "    frame = pd.read_csv(dataFolder + filename)\n",
     "\n",
     "    #load each experiment result row\n",
-    "    exp_result_row = experiment_result[experiment_result['No'] == i]\n",
-    "    frame['exp_num'] = i\n",
+    "    filt = experiment_result['No'] == idx\n",
+    "    exp_result_row = experiment_result[filt]\n",
+    "    frame['exp_num'] = idx\n",
     "\n",
     "    #add experiment settings to features\n",
     "    frame['material'] = exp_result_row.iloc[0]['material']\n",
@@ -276,7 +360,8 @@
     "    frames.append(frame)\n",
     "\n",
     "df = pd.concat(frames, ignore_index = True)\n",
-    "df.head(3)"
+    "display(df.head(3))\n",
+    "print(df.shape)"
    ]
   },
   {
@@ -298,47 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Layer 1 Up       4085\n",
-       "Repositioning    3377\n",
-       "Layer 2 Up       3104\n",
-       "Layer 3 Up       2794\n",
-       "Layer 1 Down     2655\n",
-       "End              2585\n",
-       "Layer 2 Down     2528\n",
-       "Layer 3 Down     2354\n",
-       "Prep             1795\n",
-       "end                 8\n",
-       "Starting            1\n",
-       "Name: Machining_Process, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "source": [
-    "df['Machining_Process'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.replace({'Machining_Process': {'Starting':'Prep','end':'End'}}, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +403,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 51
     }
    ],
    "source": [
@@ -367,7 +412,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.replace({'Machining_Process': {'Starting':'Prep','end':'End'}}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Layer 1 Up       4085\n",
+       "Repositioning    3377\n",
+       "Layer 2 Up       3104\n",
+       "Layer 3 Up       2794\n",
+       "Layer 1 Down     2655\n",
+       "End              2593\n",
+       "Layer 2 Down     2528\n",
+       "Layer 3 Down     2354\n",
+       "Prep             1796\n",
+       "Name: Machining_Process, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
+   "source": [
+    "df['Machining_Process'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +462,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 54
     }
    ],
    "source": [
