--- a/Topic 02 - Classification/T22_Logistic_Regression_Iris_Full.ipynb
+++ b/Topic 02 - Classification/T22_Logistic_Regression_Iris_Full.ipynb
@@ -46,8 +46,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from PlotFunction import plot_decision_surface_train_test, plot_decision_surface_predict"
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
