update for class

--- a/Topic 02 - Classification/T12_Perceptron_Multiclass_Student.ipynb
+++ b/Topic 02 - Classification/T12_Perceptron_Multiclass_Student.ipynb
@@ -116,11 +116,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = \"firstTry\"\n",
-    "paramSet = {\n",
-    "    \"firstTry\": {\"eta0\": 0.01, \"n_iter_no_change\": 3, \"random_state\": 5},\n",
-    "    \"best\": {\"eta0\": 0.1, \"n_iter_no_change\": 10, \"random_state\": 1},\n",
-    "}"
+    "eta0 = 0.01\n",
+    "random_state=1\n",
+    "n_iter_no_change=10"
    ]
   },
   {
@@ -130,11 +128,11 @@
    "outputs": [],
    "source": [
     "ppn = Perceptron(\n",
-    "    eta0=paramSet[param][\"eta0\"],\n",
-    "    random_state=paramSet[param][\"random_state\"],\n",
+    "    eta0=eta0,\n",
+    "    random_state=random_state,\n",
     "    verbose=1,\n",
-    "    n_iter_no_change=paramSet[param][\"n_iter_no_change\"],\n",
-    ")"
+    "    n_iter_no_change=n_iter_no_change,\n",
+    "    )"
    ]
   },
   {
@@ -193,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_decision_surface_train_test(X_train_std, X_test_std, y_train, y_test, ppn, filename=\"Images/T12_Img_Perceptron.png\")"
+    "plot_decision_surface_train_test(X_train_std, X_test_std, y_train, y_test, ppn)"
    ]
   },
   {
@@ -246,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_decision_surface_predict(X_new_std, y_new, ppn, filename=\"Image/T12_Img_Perceptron_new.png\")"
+    "plot_decision_surface_predict(X_new_std, y_new, ppn)"
    ]
   }
  ]
